Fix tooltip z-index

--- a/src/page/new-project/components/shareholders/shareholders.css
+++ b/src/page/new-project/components/shareholders/shareholders.css
@@ -71,6 +71,7 @@
     font-size: 21px;
     line-height: 28px;
     border: 1px solid rgba(100,100,100,0.4);
+    z-index: 1000;
 }
 
 .new-project-shareholders .info-tooltip.show {
@@ -139,6 +140,7 @@
     /*transform: translateY(-52%);*/
     font-size: 26px;
     font-weight: 300;
+    z-index: 1;
 }
 
 
@@ -146,6 +148,8 @@
     margin-top: 16px;
     transition: opacity 0.4s ease-in 0.1s;
     opacity: 0;
+    position: relative;
+    z-index: 2;
 }
 
 .new-project-shareholders .shareholder.show,
